src/liquid_parquet/src/tests/snapshots/liquid_cache_parquet__tests__referer_filtering.snap
---
source: src/liquid_parquet/src/tests/mod.rs
expression: "format!(\"plan: \\n{}\\nvalues: \\n{}\", plan, reference)"
---
plan: 
┌───────────────────────────┐
│          SortExec         │
│    --------------------   │
│       Referer@0 DESC      │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│  InProcessLiquidCacheExec │
│    --------------------   │
│    InProcessLiquidCache   │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│       DataSourceExec      │
│    --------------------   │
│          files: 1         │
│                           │
│          format:          │
│       liquid_parquet      │
└───────────────────────────┘

values: 
+---------------------------------------------------------------------------------------------------------+
| Referer                                                                                                 |
+---------------------------------------------------------------------------------------------------------+
| https://go.mail/folder-1/online.ru/search?text=скачать из                                               |
| http://tambov.irr.ru/registrict=2660628&cbv=r2013%2F&ei                                                 |
| http://tambov.irr.ru/registrict=2660628&cbv=r2013%2F&ei                                                 |
| http://tambov.irr.ru/registrict=2660628&cbv=r2013%26ev_positions/2/transmittaD3xnA%26ad%3D1%26bid%3D400 |
| http://tambov.irr.ru/registrict=2660628&cbv=r2013%26ev_pl%3Dh%26utm_source=view.php                     |
| http://tambov.irr.ru/registrict=2660628&cbv=r2013%26ev_pl%3Dh%26utm_source=view.php                     |
| http://tambov.irr.ru/filmId=BcVrXpM5UXI&where=any&numphoto                                              |
| http://tambov.irr.ru/filmId=BcVrXpM5UXI&where=any&numphoto                                              |
| http://tambov.irr.ru/avtoma-gorod55.ru/cars/micros/out-of-town                                          |
| http://tambov.irr.ru/avtoma-gorod55.ru/cars/micros/out-of-town                                          |
+---------------------------------------------------------------------------------------------------------+
